2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Update to new version, new variable tag NOW.

2003-12-12  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb, templates_parser-filter.adb:
	Update to new version, MATCH filter support a regpat (uniform with
	 REPLACE and REPLACE_ALL filters).
	
2003-12-12  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb, templates_parser-filter.adb:
	Update to new version, support for FORMAT_DATE filter.

2003-12-09  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb, templates_parser-filter.adb:
	Update version. New filter REPLACE_ALL.

2003-12-08  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb, templates_parser-filter.adb:
	Update to version 7.0.
	Handles discrete varible tag as filter's parameter.

2003-12-07  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.ads:
	Update copyright notice.

2003-12-06  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.ads, templates_parser.adb:
	Update to new version.
	("&"): Add versions to prepend data into the vector.

2003-12-04  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* memory_streams.ads,  memory_streams.adb:
	(Append): New parameter Allow_Free for be able to append pointer to
	 static data.
	(Append): Do nothing in case of null data length.

2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser-input.adb:
	Update to new templates_parser version.
	Set Support_Compressed to False. The template engine must get the
	 resource uncompressed to be able to parse it.

2003-11-29  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb, templates_parser-filter.adb:
	Update to 6.5 version.
	Implements the new REPLACE filter.

2003-11-18  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib/*:
	Release 1.2.1.

	* zlib/ChangeLog:
	Make it binary for CVS, because it contain CVS macros in text.

2003-11-12  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib/*:
	Prerelease 1.2.0.8.

2003-11-10  Pascal Obry  <pascal.obry@edf.fr>
